Swagger and Improved REST Documentation for the Clients
